<?xml version="1.0" encoding="utf-8"?>
<com.google.firebase.inappmessaging.display.internal.layout.FiamFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:padding="24dp">

    <FrameLayout
        android:id="@+id/image_content_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.google.firebase.inappmessaging.display.internal.ResizableImageView
            android:id="@+id/image_view"
            style="@style/FiamUI.ResizableImageView"
            android:clickable="true"
            android:focusable="true"
            android:adjustViewBounds="true"
            tools:src="@drawable/placeholder_850_850"
            tools:visibility="visible" />
    </FrameLayout>

    <Button
        android:id="@+id/collapse_button"
        style="@style/FiamUI.CollapseButton"
        android:layout_gravity="top|end" />

</com.google.firebase.inappmessaging.display.internal.layout.FiamFrameLayout>
