...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fiam_ui_demo" />

            <Button
                android:id="@+id/start"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/start" />
...
                    android:id="@+id/banner_fiam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banner" />

                <RadioButton
                    android:id="@+id/image_fiam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image" />

                <RadioButton
                    android:id="@+id/card_fiam"
...
